--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -5,6 +5,7 @@
  glaser_band:0 "Glaser Band"
  merc_elite_geniburgh_forces:0 "§JElite Geniburgher Forces§!"
  merc_hussen_guards:0 "Hussen Guards"
+ merc_yitirilenler:0 "Yitirilenler"
 
  merc_bidnicy:0 "Bídnicy"
  merc_vagabondians:0 "Vagabondians"
