--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -370,22 +370,22 @@
  PROV369:0 "Lending"
  PROV370:0 "Enorland"
  PROV371:0 "Coilechall"
- PROV372:0 "372"
- PROV373:0 "373"
- PROV374:0 "374"
- PROV375:0 "375"
- PROV376:0 "376"
- PROV377:0 "377"
- PROV378:0 "378"
- PROV379:0 "379"
- PROV380:0 "380"
- PROV381:0 "381"
+ PROV372:0 "Sirna"
+ PROV373:0 "Eniture"
+ PROV374:0 "Zerkip"
+ PROV375:0 "Kokbet"
+ PROV376:0 "Turunpaa"
+ PROV377:0 "Jortiga"
+ PROV378:0 "Yentave"
+ PROV379:0 "Diba"
+ PROV380:0 "Kimeca"
+ PROV381:0 "Panjuke"
  PROV382:0 "Bagarca"
- PROV383:0 "383"
- PROV384:0 "384"
- PROV385:0 "385"
- PROV386:0 "386"
- PROV387:0 "387"
+ PROV383:0 "Pizakru"
+ PROV384:0 "Vikiipute"
+ PROV385:0 "Metiipa"
+ PROV386:0 "Pati"
+ PROV387:0 "Mukebiir"
  PROV388:0 "Cesmont"
  PROV389:0 "Retonoe"
  PROV390:0 "Brecue"
@@ -1012,7 +1012,7 @@
  PROV1011:0 "1011"
  PROV1012:0 "Fawud"
  PROV1013:0 "Blue Sea"
- PROV1014:0 "1014"
+ PROV1014:0 "Salmitäinen"
  PROV1015:0 "1015"
  PROV1016:0 "1016"
  PROV1017:0 "Fawud"
@@ -1095,7 +1095,7 @@
  PROV1094:0 "1094"
  PROV1095:0 "Markomer"
  PROV1096:0 "Fawud"
- PROV1097:0 "1097"
+ PROV1097:0 "Eastern Sea of Oiva"
  PROV1098:0 "1098"
  PROV1099:0 "1099"
  PROV1100:0 "Qupatra"
@@ -1332,7 +1332,7 @@
  PROV1331:0 "1331"
  PROV1332:0 "1332"
  PROV1333:0 "Saaz"
- PROV1334:0 "1334"
+ PROV1334:0 "Dusrat"
  PROV1335:0 "Digacopians"
  PROV1336:0 "Nirqad"
  PROV1337:0 "Mahnex"
@@ -1621,19 +1621,19 @@
  PROV1620:0 "Sagmpahi"
  PROV1621:0 "Luksonoy"
  PROV1622:0 "Atlow Bay"
- PROV1623:0 "1623"
+ PROV1623:0 "Ahti Bay"
  PROV1624:0 "Meskenakve"
- PROV1625:0 "1625"
+ PROV1625:0 "Mielikkinramman Fan"
  PROV1626:0 "Oltowake"
  PROV1627:0 "Wahiwa"
  PROV1628:0 "Colocktaw"
  PROV1629:0 "Nakevsekat"
- PROV1630:0 "1630"
+ PROV1630:0 "Eastern Jääkarhunu Sea"
  PROV1631:0 "Tanyasetk"
  PROV1632:0 "Asqomtaqan"
- PROV1633:0 "1633"
+ PROV1633:0 "Western Sea of Oiva"
  PROV1634:0 "Memgawat"
- PROV1635:0 "1635"
+ PROV1635:0 "Jääkarhuni Sea"
  PROV1636:0 "1636"
  PROV1637:0 "Tuwaheckv"
  PROV1638:0 "Ulwatij"
@@ -1649,18 +1649,18 @@
  PROV1648:0 "Esuenka"
  PROV1649:0 "Kuatoleme"
  PROV1650:0 "Emehick"
- PROV1651:0 "1651"
+ PROV1651:0 "Khutigar Bay"
  PROV1652:0 "Hefkalopi"
  PROV1653:0 "1653"
  PROV1654:0 "1654"
  PROV1655:0 "1655"
  PROV1656:0 "Dalugsiwa"
- PROV1657:0 "1657"
+ PROV1657:0 "Outer Khutigar Bay"
  PROV1658:0 "Kosara"
  PROV1659:0 "1659"
  PROV1660:0 "1660"
  PROV1661:0 "Kahilese"
- PROV1662:0 "1662"
+ PROV1662:0 "North Pemenian Coast"
  PROV1663:0 "Papachisen"
  PROV1664:0 "1664"
  PROV1665:0 "Borveren"
@@ -2032,7 +2032,7 @@
  PROV2031:0 "Sumawat"
  PROV2032:0 "2032"
  PROV2033:0 "2033"
- PROV2034:0 "2034"
+ PROV2034:0 "North Sazugarat"
  PROV2035:0 "2035"
  PROV2036:0 "2036"
  PROV2037:0 "2037"
