--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -29,3 +29,30 @@
 
  ehrenstaat_strengthen_republicanism_button:0 "Strengthen Republicanism"
  ehrenstaat_strengthen_republicanism_button_desc:0 "Opposition got suspicious about our centralisation efforts and are accusing us of authoritarism. By giving a public speech we can reassure them that our intentions are pure."
+
+ ## Decisions
+
+ ehrenstaat_take_control_over_army_title:0 "Subordinate our Army"
+ ehrenstaat_take_control_over_army_desc:0 "Our army will go under consuls control so he can reform it and prepare for our future campaign against Nifthem."
+
+ ehrenstaat_take_control_over_navy_title:0 "Enforce Loyalty in the Navy"
+ ehrenstaat_take_control_over_navy_desc:0 "Our navy will go under consuls control so he can reform it and prepare for our future campaign against Nifthem."
+
+ ehrenstaat_take_control_over_administration_title:0 "Take Control Over the Administration"
+ ehrenstaat_take_control_over_administration_desc:0 "Giving administration to Consul will allow us to better administer our vassals. It will also allow us to expand our control over Nifthemian dependencies"
+ EHR_nifthem_vassalisation:0 "We will be able to change Endoobdorf and Bloemrijkland into regular vassals."
+
+ ehrenstaat_vassalize_endoobdorf_title:0 "Bring Endoobdorf Closer to Us"
+ ehrenstaat_vassalize_endoobdorf_desc:0 "Endoobdorf is bordering our main rival for Nifthemian domination - Randwerpen. We should integrate them to our administration so our war path to them is clear."
+
+ ehrenstaat_vassalize_bloemrijkland_title:0 "Reign Over Bloemrijkland"
+ ehrenstaat_vassalize_bloemrijkland_desc:0 "We can't no longer trust Bloemrijkland to decide for themselves. Their aspiration to become one of the imperial princes are dangerous to our plans."
+
+ EHR_authority_centralisation_tt:0 "Didn't take control over something for 2 years."
+
+ EHR_control_over_army:0 "Army Subjugated"
+ desc_EHR_control_over_army:0 "Entire army is now under command of our consul."
+ EHR_control_over_navy:0 "Navy Loyal"
+ desc_EHR_control_over_navy:0 "Our navy is ready to fight for us."
+ EHR_control_over_administration:0 "Administration Controlled"
+ desc_EHR_control_over_administration:0 "We hold absolute power over our administration."
