--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -56,3 +56,13 @@
  desc_EHR_control_over_navy:0 "Our navy is ready to fight for us."
  EHR_control_over_administration:0 "Administration Controlled"
  desc_EHR_control_over_administration:0 "We hold absolute power over our administration."
+
+ ## Events
+
+ td_ehrenstaat.1.t:0 "Storm on the Horizon"
+ td_ehrenstaat.1.desc:0 "You must kill Nifthemians with hammers"
+ td_ehrenstaat.1.a:0 "Ok"
+
+ td_ehrenstaat.2.t:0 "War for Nifthem"
+ td_ehrenstaat.2.desc:0 "Kill them with hammers now!"
+ td_ehrenstaat.2.a:0 "Got It Boss"
