--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -601,3 +601,9 @@
  diwaran_area:0 "Diwaran"
  lakchak_area:0 "Lakchack"
  hanpun_area:0 "Hanpun"
+ taslimav_area:0 "Taslimav"
+ mashten_area:0 "Mashten"
+ kapeztag_valley_area:0 "Kapeztag"
+ ramtasal_area:0 "Ramtasal"
+ cukoradij_area:0 "Cukoradij"
+ quatrara_area:0 "Quatrara"
