--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -198,6 +198,7 @@
  warilasi:0 "Warilasi"
  ramtasali:0 "Ramtasali"
  xawarani:0 "Xawarani"
+ avukhati:0 "Avukhati"
 
  bunelisuli_group:0 "Bunelisuli"
  baraguniis:0 "Baraguniis"
@@ -220,6 +221,11 @@
  samadian_group:0 "Samadian"
  paredeshian:0 "Paredeshian"
  toga:0 "Toga"
+ sangari:0 "Sangari"
+ zebankadhi:0 "Zebankadhi"
+ tehnibake:0 "Tehnibake"
+ danase:0 "Danase"
+ andemi:0 "Andemi"
 
  topomundi_group:0 "Topomundi"
  kunskala:0 "Kunskala"
