--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2019,7 +2019,7 @@
  PROV2018:0 "Qarsanish"
  PROV2019:0 "Ramashtar"
  PROV2020:0 "Meleqars"
- PROV2021:0 "2021"
+ PROV2021:0 "Tambera"
  PROV2022:0 "Hitraan"
  PROV2023:0 "Maraxot"
  PROV2024:0 "Šam"
@@ -2027,7 +2027,7 @@
  PROV2026:0 "Bahramodšahr"
  PROV2027:0 "Mexagam"
  PROV2028:0 "Magarox"
- PROV2029:0 "2029"
+ PROV2029:0 "West Escravian Sea"
  PROV2030:0 "Zayamar"
  PROV2031:0 "Sumawat"
  PROV2032:0 "2032"
@@ -2035,20 +2035,20 @@
  PROV2034:0 "North Sazugarat"
  PROV2035:0 "2035"
  PROV2036:0 "2036"
- PROV2037:0 "2037"
+ PROV2037:0 "Pinshta"
  PROV2038:0 "2038"
  PROV2039:0 "Hitraan"
- PROV2040:0 "2040"
- PROV2041:0 "2041"
+ PROV2040:0 "Pakhatarg"
+ PROV2041:0 "Tazaduj"
  PROV2042:0 "Agellardian Coast"
- PROV2043:0 "2043"
- PROV2044:0 "2044"
- PROV2045:0 "2045"
- PROV2046:0 "2046"
- PROV2047:0 "2047"
- PROV2048:0 "2048"
- PROV2049:0 "2049"
- PROV2050:0 "2050"
+ PROV2043:0 "Tazaduj"
+ PROV2044:0 "Kusadoitnians"
+ PROV2045:0 "Kusadoitnians"
+ PROV2046:0 "Kusadoitnians"
+ PROV2047:0 "Tazaduj"
+ PROV2048:0 "Arhazit"
+ PROV2049:0 "Patona"
+ PROV2050:0 "Pantanan Bay"
  PROV2051:0 "2051"
  PROV2052:0 "2052"
  PROV2053:0 "2053"
@@ -2060,7 +2060,7 @@
  PROV2059:0 "Karunabal"
  PROV2060:0 "Wiyaharg"
  PROV2061:0 "Karunabal"
- PROV2062:0 "2062"
+ PROV2062:0 "Karolantan"
  PROV2063:0 "The Golden Gulf"
  PROV2064:0 "2064"
  PROV2065:0 "2065"
@@ -2117,35 +2117,35 @@
  PROV2116:0 "2116"
  PROV2117:0 "2117"
  PROV2118:0 "2118"
- PROV2119:0 "2119"
- PROV2120:0 "2120"
- PROV2121:0 "2121"
- PROV2122:0 "2122"
- PROV2123:0 "2123"
- PROV2124:0 "2124"
+ PROV2119:0 "Katfazar"
+ PROV2120:0 "Fandramebad"
+ PROV2121:0 "Avdalbad"
+ PROV2122:0 "Ehtan"
+ PROV2123:0 "Azuramand"
+ PROV2124:0 "Medilizma"
  PROV2125:0 "2125"
- PROV2126:0 "2126"
- PROV2127:0 "2127"
+ PROV2126:0 "Tahkasus"
+ PROV2127:0 "Turbatak"
  PROV2128:0 "2128"
  PROV2129:0 "2129"
  PROV2130:0 "2130"
  PROV2131:0 "2131"
  PROV2132:0 "2132"
- PROV2133:0 "2133"
- PROV2134:0 "2134"
- PROV2135:0 "2135"
- PROV2136:0 "2136"
- PROV2137:0 "2137"
- PROV2138:0 "2138"
- PROV2139:0 "2139"
- PROV2140:0 "2140"
- PROV2141:0 "2141"
- PROV2142:0 "2142"
- PROV2143:0 "2143"
+ PROV2133:0 "Gruwananst"
+ PROV2134:0 "Hallekha"
+ PROV2135:0 "Arkhaz"
+ PROV2136:0 "Pelavar"
+ PROV2137:0 "Matrara"
+ PROV2138:0 "Dzankal"
+ PROV2139:0 "Tunghal"
+ PROV2140:0 "Kala-Arg"
+ PROV2141:0 "Petadban"
+ PROV2142:0 "Telapashtan"
+ PROV2143:0 "Marna"
  PROV2144:0 "Andacah"
  PROV2145:0 "Akardur"
  PROV2146:0 "Paqz"
- PROV2147:0 "2147"
+ PROV2147:0 "Transhapal"
  PROV2148:0 "Mazdesnish"
  PROV2149:0 "Kišwar"
  PROV2150:0 "Gazdum"
@@ -3084,7 +3084,7 @@
  PROV3083:0 "3083"
  PROV3084:0 "3084"
  PROV3085:0 "3085"
- PROV3086:0 "3086"
+ PROV3086:0 "Sukiran"
  PROV3087:0 "3087"
  PROV3088:0 "3088"
  PROV3089:0 "3089"
