--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -66,3 +66,16 @@
  td_ehrenstaat.2.t:0 "War for Nifthem"
  td_ehrenstaat.2.desc:0 "Kill them with hammers now!"
  td_ehrenstaat.2.a:0 "Got It Boss"
+
+ ## War
+
+ cb_war_for_nifthem:0 "War For Nifthem"
+ cb_war_for_nifthem_desc:0 "We will fight over domination for Nifthemi region"
+ wg_war_for_nifthem:0 "War For Nifthem"
+ wg_war_for_nifthem_desc:0 "Wargoal is to show our supremacy by winning battles."
+ PEACE_po_ehrenstaat_victorious:0 ""
+ po_ehrenstaat_victorious_desc:0 ""
+ PEACE_po_randwerpen_victorious:0 ""
+ po_randwerpen_victorious_desc:0 ""
+ WAR_FOR_NIFTHEM_WN:0 "War For Nifthem"
+ 
