formables and prv names and flags

--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -106,3 +106,9 @@
 
  anavastan_nation_title:0 "Become Anavastan @ANN"
  anavastan_nation_desc:0 "Kylitir people are not native to these lands, but nonetheless we now live there and slowly integrate with the natives, learning a more peaceful way of life."
+
+ kakatachia_nation_title:0 "Unify Hestan @KKA"
+ kakatachia_nation_desc:0 "If people of Hestan can't unite on their own, they will need a great leader to do it for them."
+
+ tasbibalad_nation_title:0 "Proclaim God's Kingdom @TAS"
+ tasbibalad_nation_desc:0 "When Nandak received the God's wisdom on Askaragihan Peak he set out to spread His word. Now we continue his legacy as one nation."
