--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -161,7 +161,7 @@
  cyromeids:0 "Cyromeid"
  mamerians:0 "Mamerian"
 
- hestan_group:0 "Hestan"
+ hestan_group:0 "Hestani"
  ewitrawi:0 "Ewitrawi"
  mewitan:0 "Mewitan"
  ehtywiran:0 "Ehtywiran"
