--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -888,4 +888,10 @@
  PES_ADJ:0 "Pesakhi"
  MAI:0 "Maisha"
  MAJ_ADJ:0 "Maishan"
- 
+
+ KKA:0 "Kakatachia"
+ KKA_ADJ:0 "Kakatachian"
+ TAS:0 "Tasbibalad"
+ TAS_ADJ:0 "Tasbibaladi"
+ ZUW:0 "Zuwaran"
+ ZUW_ADJ:0 "Zuwarani"
