--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1366,7 +1366,7 @@
  PROV1365:0 "Pirtaw"
  PROV1366:0 "Izkar"
  PROV1367:0 "Matwa"
- PROV1368:0 "Niwaxar"
+ PROV1368:0 "1368"
  PROV1369:0 "Nirmaqran"
  PROV1370:0 "Suxat"
  PROV1371:0 "Hnat"
@@ -2047,15 +2047,15 @@
  PROV2046:0 "Kusadoitnians"
  PROV2047:0 "Tazaduj"
  PROV2048:0 "Arhazit"
- PROV2049:0 "Patona"
- PROV2050:0 "Pantanan Bay"
- PROV2051:0 "2051"
- PROV2052:0 "2052"
- PROV2053:0 "2053"
- PROV2054:0 "2054"
+ PROV2049:0 "Pantanan Bay"
+ PROV2050:0 "Patona"
+ PROV2051:0 "Böwen"
+ PROV2052:0 "Zambtar"
+ PROV2053:0 "Chartul"
+ PROV2054:0 "Ÿaçagyl"
  PROV2055:0 "2055"
- PROV2056:0 "2056"
- PROV2057:0 "2057"
+ PROV2056:0 "Drömpa"
+ PROV2057:0 "Ÿupigun"
  PROV2058:0 "2058"
  PROV2059:0 "Karunabal"
  PROV2060:0 "Wiyaharg"
@@ -2066,7 +2066,7 @@
  PROV2065:0 "2065"
  PROV2066:0 "Durnari"
  PROV2067:0 "Karunabal"
- PROV2068:0 "2068"
+ PROV2068:0 "Mutna"
  PROV2069:0 "2069"
  PROV2070:0 "2070"
  PROV2071:0 "2071"
@@ -2086,16 +2086,16 @@
  PROV2085:0 "2085"
  PROV2086:0 "2086"
  PROV2087:0 "2087"
- PROV2088:0 "2088"
- PROV2089:0 "2089"
- PROV2090:0 "2090"
- PROV2091:0 "2091"
+ PROV2088:0 "Parxande"
+ PROV2089:0 "Patmar"
+ PROV2090:0 "Hubinki"
+ PROV2091:0 "Khanpur"
  PROV2092:0 "2092"
  PROV2093:0 "2093"
  PROV2094:0 "2094"
- PROV2095:0 "2095"
+ PROV2095:0 "Gaçalpur"
  PROV2096:0 "2096"
- PROV2097:0 "2097"
+ PROV2097:0 "Gurlamak"
  PROV2098:0 "Budar"
  PROV2099:0 "2099"
  PROV2100:0 "Mafid"
@@ -2105,31 +2105,31 @@
  PROV2104:0 "2104"
  PROV2105:0 "2105"
  PROV2106:0 "2106"
- PROV2107:0 "2107"
- PROV2108:0 "2108"
- PROV2109:0 "2109"
- PROV2110:0 "2110"
- PROV2111:0 "2111"
- PROV2112:0 "2112"
- PROV2113:0 "2113"
- PROV2114:0 "2114"
- PROV2115:0 "2115"
- PROV2116:0 "2116"
- PROV2117:0 "2117"
- PROV2118:0 "2118"
+ PROV2107:0 "Düÿlumak"
+ PROV2108:0 "Dogamar"
+ PROV2109:0 "Kagantarluk"
+ PROV2110:0 "Çomretulg"
+ PROV2111:0 "Çiñramak"
+ PROV2112:0 "Golÿamtu"
+ PROV2113:0 "Äñetpar"
+ PROV2114:0 "Tugär"
+ PROV2115:0 "Zunaram"
+ PROV2116:0 "Sükara"
+ PROV2117:0 "Msytar"
+ PROV2118:0 "Täsarakün"
  PROV2119:0 "Katfazar"
  PROV2120:0 "Fandramebad"
  PROV2121:0 "Avdalbad"
  PROV2122:0 "Ehtan"
  PROV2123:0 "Azuramand"
  PROV2124:0 "Medilizma"
- PROV2125:0 "2125"
+ PROV2125:0 "Bosgan"
  PROV2126:0 "Tahkasus"
  PROV2127:0 "Turbatak"
- PROV2128:0 "2128"
- PROV2129:0 "2129"
+ PROV2128:0 "Saqe"
+ PROV2129:0 "Pushtur"
  PROV2130:0 "2130"
- PROV2131:0 "2131"
+ PROV2131:0 "Kasumgar"
  PROV2132:0 "2132"
  PROV2133:0 "Gruwananst"
  PROV2134:0 "Hallekha"
@@ -2160,7 +2160,7 @@
  PROV2159:0 "Maraqiz"
  PROV2160:0 "Skawarid"
  PROV2161:0 "Widazih"
- PROV2162:0 "2162"
+ PROV2162:0 "Askeza"
  PROV2163:0 "2163"
  PROV2164:0 "2164"
  PROV2165:0 "2165"
@@ -2169,13 +2169,13 @@
  PROV2168:0 "2168"
  PROV2169:0 "2169"
  PROV2170:0 "2170"
- PROV2171:0 "2171"
+ PROV2171:0 "Dazlum"
  PROV2172:0 "2172"
  PROV2173:0 "2173"
- PROV2174:0 "2174"
+ PROV2174:0 "Ÿaçagyl"
  PROV2175:0 "2175"
  PROV2176:0 "2176"
- PROV2177:0 "2177"
+ PROV2177:0 "Ÿaçagyl"
  PROV2178:0 "2178"
  PROV2179:0 "2179"
  PROV2180:0 "2180"
@@ -2704,7 +2704,7 @@
  PROV2703:0 "2703"
  PROV2704:0 "2704"
  PROV2705:0 "2705"
- PROV2706:0 "2706"
+ PROV2706:0 "Gemek"
  PROV2707:0 "2707"
  PROV2708:0 "2708"
  PROV2709:0 "2709"
@@ -3067,7 +3067,7 @@
  PROV3066:0 "3066"
  PROV3067:0 "3067"
  PROV3068:0 "3068"
- PROV3069:0 "3069"
+ PROV3069:0 "Drabazid"
  PROV3070:0 "3070"
  PROV3071:0 "3071"
  PROV3072:0 "3072"
