--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -167,6 +167,7 @@
  ehtywiran:0 "Ehtywiran"
  hussen:0 "Hussen"
  sunbat:0 "Sunbat"
+ karadei:0 "Karadei"
 
  tonatitlani_group:0 "Tonatitlani"
  tikinutli:0 "Tikinutli"
