--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2331,7 +2331,7 @@
  PROV2330:0 "Jayuba"
  PROV2331:0 "Guanchaca"
  PROV2332:0 "Tinama"
- PROV2333:0 "Yukeca"
+ PROV2333:0 "2333"
  PROV2334:0 "Buyacoguey"
  PROV2335:0 "Manatisa"
  PROV2336:0 "Birnuga"
