--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -57,6 +57,9 @@
  EHR_control_over_administration:0 "Administration Controlled"
  desc_EHR_control_over_administration:0 "We hold absolute power over our administration."
 
+ ehrenstaat_declare_war_for_nifthem_title:0 "Declare War For Nifthem"
+ ehrenstaat_declare_war_for_nifthem_desc:0 "We can do it now but we won't be fully prepared for it resulting in worse performance of our troops."
+
  ## Events
 
  td_ehrenstaat.1.t:0 "Storm on the Horizon"
