flags + government changes + loc + 'formable'

--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -20,3 +20,39 @@
  ACH_rejected_memlashal:0 "Rejected Our Offer"
  ACH_accepted_memlashal:0 "Accepted Our Offer"
  ACH_accepted_memlashal_others:0 "Dealing with Invaders"
+
+ pamapoikia_ideas:0 "Pamapoikian Ideas"
+ pamapoikia_ideas_bonus:0 "Pamapoikian Ambition"
+ pamapoikia_ideas_start:0 "Pamapoikian Traditions"
+ pamapoikia_never_again:0 "Never Again"
+ pamapoikia_never_again_desc:0 "After the Visparayan invasion our society was in shambles. Divided between whether ambitions to return home as soon as possible or to gather our forces across the sea. Now after many years our fate has sealed and we found a new life in our old colonies. We will not lose our new home."
+ pamapoikia_zakarturi_influence:0 "Zakarturi Influence"
+ pamapoikia_zakarturi_influence_desc:0 "Our lands are filled with ancient Zakarturi sacral and secular architecture. Our artists often take inspiration in them and include their elements in elements of our culture. Zakarturi poems are translated and reintrepreted giving us a new insight on life."
+ pamapoikia_furmarian_trade:0 "Furmaric Trade"
+ pamapoikia_furmarian_trade_desc:0 "Major Ports along the Furmaric coast, especially cities such as Kanoripol and Mestaneri, grant us the access to Furmaric Sea, which becomes much more busy with merchants as the years go by. Sailors use our ports to buy wine and wool and sell it to western markets for a high profit."
+ pamapoikia_dasarali_copper_mines:0 "Dasarali Copper Mines"
+ pamapoikia_dasarali_copper_mines_desc:0 "Dasarali mountains are filled to the brim with valuable resources such as iron, sulfur and most notably copper. In our modern times copper is used in casting of guns and cannons to mount on ships or deploy on the battlefield. "
+ pamapoikia_northern_navy:0 "Northern Navy"
+ pamapoikia_northern_navy_desc:0 "With increasing value of trade in Furmaric sea, competitiveness there is also growing. Many nations are fighting over important ports and straits to secure their best interest. If we don't want to fall behind we must join this arms race."
+ pamapoikia_laws_for_the_people:0 "Laws for the People"
+ pamapoikia_laws_for_the_people_desc:0 "In most parts of the world laws are written to please the elites and the aristocracy at the cost of the wellbeing of other citizens, but here laws are written for the people for they are the backbone of our society."
+ pamapoikia_new_destiny:0 "New Destiny"
+ pamapoikia_new_destiny_desc:0 "Many people accepted our new reality. Dreams of returning to Pamkusea are long gone as people settle more and more in Zakarturia and see themselves as native Pamapoikians.We now have to wear this name with pride, because it's the only thing we have left."
+
+ pamkusea_ideas:0 "Pamkusean Ideas"
+ pamkusea_ideas_bonus:0 "Pamkusean Ambition"
+ pamkusea_ideas_start:0 "Pamkusean Traditions"
+ pamkusea_and_were_back:0 "And We're Back"
+ pamkusea_and_were_back_desc:0 "It's been a few hundred years, but that's only a blink in the long history of Pamkusea. We are back to our true homeland. We will defend it to the last drop of peasants' blood."
+ pamkusea_new_age_innovations:0 "New Age of Innovations"
+ pamkusea_new_age_innovations_desc:0 "Optimism following the reclamation of Pamkuesa led to increased cultural activity. Universities are established and ideas shared between different social classes and peoples. Topics ranging from social issues, through production methods, to military and naval technologies are discussed on a daily basis."
+ pamkusea_rural_development:0 "Rural Development"
+ pamkusea_rural_development_desc:0 "To improve our tragic economic situation we must first and foremost start at the bottom. Local vineyards and olive gardens are the most important factor to our economy because everything starts from there."
+ pamkusea_between_worlds:0 "Between Worlds"
+ pamkusea_between_worlds_desc:0 "Pamkusean Peninsula lies between 2 drastically different worlds. The west is dominated by feudalism and priority of local ownership over loyalty to the senior, while in the east strong social hierarchy is the most important. We learned to trade with merchants from both of those cultural spheres without upsetting the other."
+ pamkusea_our_sea:0 "Our Sea"
+ pamkusea_our_sea_desc:0 "The Panourgian Sea is filled with at least 5 thousand small and big islands, many of which are populated. Ancient Pamkuseans were the first ones to settle them and from that times they have lived there, to this very day. Wisdom of traversing this sea has been passed down for generations."
+ pamkusea_visparayan_influence:0 "Visparayan Influence"
+ pamkusea_visparayan_influence_desc:0 "Despite the short time the Dashavi people lived in Pamkusea, influence of their culture on ours is immense. They are potrayed as brutal invaders, but some see them as just as enlightened as us. People take inspiration from discipline of their troops and wisdom of thei rulers."
+ pamkusea_protect_the_homeland:0 "Protect the Homeland"
+ pamkusea_protect_the_homeland_desc:0 "We made a promise - we will never lose our homeland. Borders remain fortified and new military recruitment system allows for quick mobilisation in case of war. Military academies get more funding than other universities and weapons made by our gunsmiths are not only used by our well-trained soldiers but also sold abroad for profit."
