--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -30,3 +30,6 @@
  establish_new_mine_desc:0 "There are rumors of potential gold underneath a town of Rivelea at the foot of the western Cacumuds. If we invest in the efforts to find it it might benefit our economy and secure our own gold supply."
  fresh_gold_vein:0 "Fresh Gold Vein"
  desc_fresh_gold_vein:0 "This province is prospering due to large newly found gold vein."
+
+ fattoria_nobiliare_reform:0 "Fattoria Nobiliare"
+ fattoria_nobiliare_reform_desc:0 "Large swats of arable land with at most 2 types of different crops owned by the nobles are more efficient in maintaining high level of production than smaller estates."
