--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -65,7 +65,7 @@
  MLP:0 "Maalopp"
  MLP_ADJ:0 "Maaloppic"
  VAN:0 "Vanavalvur"
- VAN_ADJ:0 "Vanavlvic"
+ VAN_ADJ:0 "Vanavulvic"
  LOU:0 "Lounavalvur"
  LOU_ADJ:0 "Lounavalvic"
 
