--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -1283,8 +1283,8 @@
  NOT_NEGATIVE_BALANCE_IN_TWO_MONTHS:0 "Will NOT need a Loan in max §Y2§! Months"
  INCOME_BALANCE_MORE_THAN:0 "Last Month's Income Balance more than "
  INCOME_BALANCE_LESS_THAN:0 "Last Month's Income Balance less than "
- estate_cossacks_exploration_expedition_mod:0 "$ESTATE_NAME$ Exploration"
- desc_estate_cossacks_exploration_expedition_mod:0 "We are harnessing the pioneering instincts of the $ESTATE_NAME$ to accelerate the settlement and growth of this area."
+ estate_cossacks_exploration_expedition_mod:0 "Kakigian Exploration"
+ desc_estate_cossacks_exploration_expedition_mod:0 "We are harnessing the pioneering instincts of the [Root.GetCossacksOrFallbackName] to accelerate the settlement and growth of this area."
  decision_once_every_twenty_years:0 "This decision can only be taken once every §Y20§! years."
  estate_cossacks_exploration_expedition_effect_tooltip:1 "§G-15%§! local development cost in all Steppe provinces"
  estate_cossacks_exploration_expedition_mod_revoke_tooltip:0 "Removes §Y$ESTATE_NAME$ Exploration§! from all owned Steppe provinces."
