--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -22,3 +22,13 @@
  tummland_ideas_start:0 "Tummic Traditions"
  tummland_ideas_bonus:0 "Tummic Ambition"
  
+ piiriala_reform:0 "Piiriala"
+ piiriala_reform_desc:0 "This government represents autocratic Lounaväki lordships of Kakigia which constantly face tribal raids."
+ lounavaki_kingdom_reform:0 "Lounaväki Kingdom"
+ lounavaki_kingdom_reform_desc:0 "This government represents more decentralized government than Piirialas with more develop feudal characteristics based on kin and religion."
+ mechanic_grant_stab_on_piiriala_integration_yes:0 "Gain §G+1§! §Ystability§! when integrating subject with §YPiiriala§! government reform"
+
+ lou_dominion_over_the_steppe_title:0 "Domion over the Steppe"
+ lou_dominion_over_the_steppe_desc:0 "As we reach deeper and deeper into Kakigia, also known by our settlers as Idamaa, we become much more integrated with local people and in turn local population learns about the wonders of civilization."
+ lou_steppe_domination:0 "Steppe Domination"
+ lou_steppe_domination_desc:0 "We tamed untameable - Kakigia is ours."
