fixes + prov names + fra flavour

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1851,8 +1851,8 @@
  PROV1850:0 "1850"
  PROV1851:0 "1851"
  PROV1852:0 "1852"
- PROV1853:0 "1853"
- PROV1854:0 "1854"
+ PROV1853:0 "Apnaq"
+ PROV1854:0 "Yag"
  PROV1855:0 "1855"
  PROV1856:0 "1856"
  PROV1857:0 "1857"
@@ -2166,26 +2166,26 @@
  PROV2165:0 "2165"
  PROV2166:0 "2166"
  PROV2167:0 "2167"
- PROV2168:0 "2168"
+ PROV2168:0 "Kapran"
  PROV2169:0 "2169"
- PROV2170:0 "2170"
+ PROV2170:0 "Yenisar"
  PROV2171:0 "Dazlum"
- PROV2172:0 "2172"
+ PROV2172:0 "Mäkrwah"
  PROV2173:0 "2173"
  PROV2174:0 "Ÿaçagyl"
  PROV2175:0 "2175"
  PROV2176:0 "2176"
  PROV2177:0 "Ÿaçagyl"
- PROV2178:0 "2178"
- PROV2179:0 "2179"
- PROV2180:0 "2180"
- PROV2181:0 "2181"
- PROV2182:0 "2182"
- PROV2183:0 "2183"
- PROV2184:0 "2184"
- PROV2185:0 "2185"
- PROV2186:0 "2186"
- PROV2187:0 "2187"
+ PROV2178:0 "Vitasla"
+ PROV2179:0 "Bäkälum"
+ PROV2180:0 "Hammakir"
+ PROV2181:0 "Picigänçi"
+ PROV2182:0 "Cektar"
+ PROV2183:0 "Tolumkal"
+ PROV2184:0 "Tonixan"
+ PROV2185:0 "Mäshlid"
+ PROV2186:0 "Yüqmay"
+ PROV2187:0 "Mikra"
  PROV2188:0 "2188"
  PROV2189:0 "2189"
  PROV2190:0 "2190"
