--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -46,3 +46,8 @@
  memlashal_new_tactics_desc:0 "After the liberation of Pamkusea, it quickly became apparent, that the ancient visparayan tradition of heavy cavalry and horse riding will not be effective in trechearous highlands of Pamkusea. Our ingenious military instantly adapted and took influence from local army model, famous for its use of foot infantry."
  memlashal_nusabate_of_the_north:0 "Nusabate of the North"
  memlashal_nusabate_of_the_north_desc:0 "Memlashal is standing alone against numerous heathens - eneratians, sigilians, anichvarians and tribal nations only wait for us to collapse. They are so focused on our fall they won't see our rise, for we are the true masters of Kakigia."
+
+ estate_burghers_fra_autonomous_fleets:0 "Autonomous Fleets"
+ estate_burghers_fra_autonomous_fleets_desc:0 "Despite officialy being under ownership of the great Nusabat, trade fleets of Fravasum are mostly controlled by merchant elites."
+ fra_navy_reconstruction:0 "Navy Reconstruction"
+ desc_fra_navy_reconstruction:0 "It will take some time and effort to centralize our naval operations."
