loc + minor fixes

--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -70,6 +70,17 @@
  td_ehrenstaat.2.desc:0 "Kill them with hammers now!"
  td_ehrenstaat.2.a:0 "Got It Boss"
 
+ td_ehrenstaat.3.t:0 "War for Nifthem"
+ td_ehrenstaat.3.desc:0 "They attacked us"
+ td_ehrenstaat.3.a:0 "How they dare"
+
+ td_ehrenstaat.4.t:0 "Fate of Randwerpen"
+ td_ehrenstaat.4.desc:0 "What do we do"
+ td_ehrenstaat.4.a:0 "Vassal them"
+ td_ehrenstaat.4.b:0 "Take City"
+ td_ehrenstaat.4.c:0 "Fully annex"
+ EHR_full_annex_randwerpen_tt:0 "We will fully annex them"
+
  ## War
 
  cb_war_for_nifthem:0 "War For Nifthem"
