--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -7,22 +7,54 @@
  merchant_principality_reform:0 "Merchant Principality"
  merchant_principality_reform_desc:0 "Our government functions in some parts like merchant republic and in some parts like monarchy."
 
- #### events
+ #### Randwerpen
 
- ## randwerpen start
+ ### randwerpen start
+
+ ## Events
  
  randwerpen.1.t:0 "Randwerpen and Ehrenstaat"
  randwerpen.1.desc:0 "Ehren ambition to become sole economic hegemon on the north required for them to have huge industrial base that was lacking on Ehren islands. Thats when first ideas to integrate Nifthem and Tummland emerged, with first being more favourable to the leadership. From this time Ehrenstaat started to tighten their grip in their sphere of influence with mass vassalization and forceful integration of cities into Ehren administration in first half of XV ceuntry.\nThis rapid Ehren expansion didn't go unnoticed as Saelian Empire started to support idea of integration of Bloemrijkland into the Empire and Randwerpen deciding to unify entire region to stop Ehren agression. Alerted leadership of Randwerpen started mass militarisation and consolidation of the realm to protect against the future invasion."
  randwerpen.1.a:0 "Inferno is coming."
  randwerpian_deterrence:0 "Randwerpian Deterrence"
+
  randwerpen.2.t:0 "Nobles displeased"
  randwerpen.2.desc:0 "The elites are worried with our recent territorial gains due to the original plan being to use our military funding to protect the state and people of Nifthem from Ehreni threats. It is now apparent that the rulership used threat of foreign invasion as a way to increase their power. Many nobles and burghers now refuse to fight in any future wars."
  randwerpen.2.a:0 "It's not what you think!"
  randwerpen_misguided_wrath:0 "Misguided Wrath"
- randwerpen.3.t:0 "False threats"
- randwerpen.3.desc:0 "Despite the government's fears of ehreni invasion, many years have passed with our army on high alert - but nobody came. People are slowly starting to lose faith in the militaristic government and go back to their normal boring lives.\nBut in recent days, one of the ministers proposed a new way to stir up the Randwerpian fervor - what if we were the ones attacking Ehrenstaat to free our enslaved brethrens?"
- randwerpen.3.a:0 "Fine. I'll do it myself."
- randwerpen.3.b:0 "Better to not wake up the sleeping beer."
+
+ randwerpen.3.t:0 "War for Nifthem"
+ randwerpen.3.desc:0 "We need to reclaim Nifthem now!"
+ randwerpen.3.a:0 "To war!"
+
+ randwerpen.4.t:0 "War for Nifthem"
+ randwerpen.4.desc:0 "We were attacked by Ehrenians!"
+ randwerpen.4.a:0 "To war!"
+
+ randwerpen.5.t:0 "Fate of Nifthem"
+ randwerpen.5.desc:0 "TODO"
+ randwerpen.5.a:0 "Enforce our rule"
+ randwerpen.5.b:0 "Let them free"
+ NAR_nifthem_new_management_tt:0 "All Ehren subjects in Nifthem will become our vassals"
+ NAR_nifthem_freedom_tt:0 "All Ehren subjects in Nifthem will become free"
+
+ nifthem_first_initiative:0 "Our Initiative"
+
+ ## Decisions
+
+ randwerpen_conquer_oodnach_title:0 "Conquer Oodnach"
+ randwerpen_conquer_oodnach_desc:0 "TODO"
+
+ randwerpen_conquer_lesser_nifthem_title:0 "Conquer Lesser Nifthem"
+ randwerpen_conquer_lesser_nifthem_desc:0 "TODO"
+
+ randwerpen_conquer_lachel_title:0 "Conquer Lachel"
+ randwerpen_conquer_lachel_desc:0 "TODO"
+ RAN_gyrdian_levies:0 "Gyrdian Levies"
+
+ randwerpen_declare_war_for_nifthem_title:0 "Start War for Nifthem"
+ randwerpen_declare_war_for_nifthem_desc:0 "We are ready to strike Ehrenstaat and push them from Nifthem."
+ NAR_conquered_nifthem_minors:0 "Lesser Nifthem and Oodnach were conquered"
 
 #### ideas
 
