--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -55,6 +55,7 @@
  randwerpen_declare_war_for_nifthem_title:0 "Start War for Nifthem"
  randwerpen_declare_war_for_nifthem_desc:0 "We are ready to strike Ehrenstaat and push them from Nifthem."
  NAR_conquered_nifthem_minors:0 "Lesser Nifthem and Oodnach were conquered"
+ NAR_preparations_finished:0 "Lost modifier Randwerpian Deterence without getting Misguided Wrath"
 
 #### ideas
 
