Pamkusean Missions finish
23 of 23 missions, tested, only localization is WIP, also custom script for annexing western part of Kakigia beacuse running millions commands is tiring.

--- a/localisation/TD_03_missions_pamkusean_l_english.yml
+++ b/localisation/TD_03_missions_pamkusean_l_english.yml
@@ -46,3 +46,81 @@
 
  vague_branching_pamkusea_3_title:0 "Branching Mission"
  vague_branching_pamkusea_3_desc:0 ""
+ Pamkusea_Coexistence_with_Zakarturi_title:0 "Coexistence with Zakarturi"
+ Pamkusea_Coexistence_with_Zakarturi_desc:0 ""
+
+ Pamkusea_Repurpose_the_Mepis_Tadzar_title:0 "Repurpose the Mepis Tadzar"
+ Pamkusea_Repurpose_the_Mepis_Tadzar_desc:0 ""
+
+ Pamkusea_A_Multiethnic_State_Exodus_title:0 "A Multiethnic State"
+ Pamkusea_A_Multiethnic_State_Exodus_desc:0 ""
+
+ Pamkusea_Coexistence_with_Dashivi_title:0 "Coexistence with Dashavi"
+ Pamkusea_Coexistence_with_Dashivi_desc:0 ""
+
+ Pamkusea_the_Varazan_Folk_title:0 "The Varazan Folk"
+ Pamkusea_the_Varazan_Folk_desc:0 ""
+
+ Pamkusea_A_Multiethnic_State_Reconquista_title:0 "A Multiethnic State"
+ Pamkusea_A_Multiethnic_State_Reconquista_desc:0 ""
+
+ Pamkusea_Retake_The_Pamkusea_title:0 "Retake the Pamkusea"
+ Pamkusea_Retake_The_Pamkusea_desc:0 ""
+
+ Pamkusea_Exile_the_Ahnoyasi_title:0 "Exile the Ahnoyasi"
+ Pamkusea_Exile_the_Ahnoyasi_desc:0 ""
+
+ Pamkusea_A_Monoethnic_State_Reconquista_title:0 "A Monoethnic State"
+ Pamkusea_A_Monoethnic_State_Reconquista_desc:0 ""
+
+ Pamkusea_Exile_the_Zakarturi_title:0 "Exile the Zakarturi"
+ Pamkusea_Exile_the_Zakarturi_desc:0 ""
+
+ Pamkusea_Convert_the_Steppes_title:0 "Convert the Steppes"
+ Pamkusea_Convert_the_Steppes_desc:0 ""
+
+ Pamkusea_A_Monoethnic_State_Exodus_title:0 "A Monoethnic State"
+ Pamkusea_A_Monoethnic_State_Exodus_desc:0 ""
+ 
+ TD_Pamkusea_Returning_Home:0 "Returning home"
+ TD_Pamkusea_Reestablishment_of_Pamkusean_Administration:0 "Reestablishment of Pamkusean Administration"
+ TD_Pamkusea_Masters_of_the_Maqitan_Army:0 "Masters of the Maqitan - Army"
+ TD_Pamkusea_Masters_of_the_Maqitan_navy:0 "Masters of the Maqitan - Navy"
+ TD_Pamkusea_Unification_of_Exiled_Pamkuseans:0 "Unification of Exiled Pamkuseans"
+ TD_Pamkusea_Establishment_of_New_Administration:0 "Establishment of New Administration"
+ TD_Pamkusea_Resettling_of_the_East:0 "Resettling of the East"
+ TD_Pamkusea_The_Gates_of_Kakigia:0 "The Gates of Kakigia"
+ TD_Pamkusea_Kakigian_Merchant_Fleet:0 "Kakigian Merchant Fleet"
+ TD_Pamkusea_Development_of_the_Homeland:0 "Development of the Homeland"
+ TD_Pamkusea_National_Favouritism:0 "National Favouritism"
+ TD_Pamkusea_Funding_the_Missionaries:0 "Funding the Missionaries"
+ TD_Pamkusea_Freedom_of_Faith:0 "Freedom of Faith"
+ TD_Pamkusea_upgraded_mepis_tadzar:0 "Mepis Tadzar redecorated"
+ TD_Pamkusea_Pamkusean_Resettlement:0 "Pamkusean Resettlement"
+ TD_Pamkusea_Extensive_Steppe_Conscription:0 "Extensive Steppe Conscription"
+ TD_Pamkusea_Revitalization_of_Pamkusean_Fravasumi_Bay:0 "Revitalization of Pamkusean Bay"
+ 
+ 
+ Pamkusea_No_Other_Maqitan_country_stronger_than_us_tooltip:0 "No other country with a capital in a region or an island bordering Maqitan sea has stronger army or navy than us."
+ Pamkusea_Maqitan_Strongest_Army_tooltip:0 "If we have the strongest army in the Maqitan sea"
+ Pamkusea_Maqitan_Strongest_Navy_tooltip:0 "If we have the strongest navy in the Maqitan sea"
+ Pamkusea_Branching_missions_column_5_tt:0 "If we picked Pamkusean Political branch, then we will gain an event to choose ethnic policy branching missions."
+ Pamkusea_Every_Zakarturi_Gisia_Province_will_gain_10_dev_cost_reduction_tt:0 "Every owned province in Gisia region will get 10% Development cost reduction for 50 years"
+ Pamkusea_Every_owned_trade_Center_in_trigger_scopes_will_gain_reward_tt:0 "Every owned trade center in required trade nodes will get +25% local trade value modifier permanently"
+ Pamkusea_branching_mission_column_5_tooltip:0 "This is Ethnic Policy branch, it will disappear upon completion An Exiled Nation if we didn't picked Pamkusean Political branch"
+ Pamkusea_Has_Selected_administrative_branch_tooltip:0 "We have completed Rebuild the administration missions and picked a mission branch"
+ Pamkusea_repurpose_mepis_tadzar_reward_tooltip:0 "Mepis Tadzar will be upgraded with addnotional 10 maximum absolutism if we are in anhativaz religion group. If we aren't, then we will be able to use it without maximum absolutism effect."
+ unlock_monoethnic_military_reform_tt:0 "Unlock Monoethnic Military 5 Tier Government Reform"
+ unlock_multiethnic_military_reform_tt:0 "Unlock Multiethnic Military 5 Tier Government Reform"
+ mepis_tadzar_allowed_nerfed_use_tt:0 "Can use Mepis Tadzar as mission Reward."
+ Pamkusea_Every_Fravasum_Province_will_gain_15_production_tt:0 "Every owned province in Fravasumi Bay will gain +15% local production efficiency for 50 years."
+ Pamkusea_Every_Gisia_Province_will_gain_33_manpower_tt:0 "Every owned province in Gisia will gain +33% manpower modifier for 50% years."
+ Pamkusea_Dynamic_Reward_depending_on_Ethnic_Branch_tt:0 "We will gain addnotional reward if we have chosen an Ethnic policy branch"
+ Pamkusea_Convert_Varazan_by_Blood_tt:0 "All owned Varazan provinces will be converted to our primary culture, but they will lose Development and gain Devastation"
+ Pamkusea_Expand_Varazan_Development_tt:0 "All owned Varazan provinces will gain +1 Development of random category"
+ 
+ 
+ multiethnic_military_reform:0 "Multiethnic Military"
+ multiethnic_military_reform_desc:0 "Placeholder"
+ monoethnic_military_reform:0 "Monoethnic Military"
+ monoethnic_military_reform_desc:0 "Placeholder"
