--- a/localisation/TD_building_names_l_english.yml
+++ b/localisation/TD_building_names_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
  building_temple_yermic:0 "Abadag"
+ building_cathedral_yermic:0 "Great Abadag"
  building_temple_saelian:0 "Church"
  building_cathedral_saelian:0 "Cathedral"
