--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -69,6 +69,7 @@
  TD_les_development:0 "Blessing of Les"
  TD_les_unrest:0 "Blessing of Les"
  TD_les_apc:0 "Blessing of Les"
+ les_randomness:0 "Random Modifiers granted"
 
  valdnieste_reform:0 "Valdnieste"
  valdnieste_reform_desc:0 "This government represents feudal system where powerful but loyal nobility holds great power in the country and trust in the Valdniek."
