--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -151,3 +151,21 @@
  geoberic_clergy_influence_desc:0 "Detachment from the matters of the empire and high popularity of liemarian ideas in our people made every man an independent philosopher and our clergy far more open-minded than those backward sigilians."
  geoberic_nationalism:0 "Geoberic Nationalism"
  geoberic_nationalism_desc:0 "As the years go by, the national pride among the burghers and nobility is getting stronger. People no longer identify with their religious community, their Emperor and not even their king - they are only loyal to their own nation."
+
+ kriegerstein_ideas:0 "Kriegersteiner Ideas"
+ kriegerstein_ideas_bonus:0 "Kriegersteiner Ambition"
+ kriegerstein_ideas_start:0 "Kriegersteiner Traditions"
+ kriegerstein_the_warriors_stone:0 "The Warrior's Stone"
+ kriegerstein_the_warriors_stone_desc:0 "Castle Kriegerstein was built during the IX century and was originally made out of wood, but was rebuilt multiple times. most notably in XIII and XVII centuries. It was named after a legendary Silvestrine noble who had to protect his land against violent northern tribals. The hill was in a perfect place to quickly spot and surprise enemies in the nearby woods. Ever since those days the castle is seen as a symbol of relentless fight for what is yours."
+ kriegerstein_magreiner_farmlands:0 "Magreiner Farmlands"
+ kriegerstein_magreiner_farmlands_desc:0 "Rich and fertile Fluvisols of Magreiner provide not only our people with food, but they are so prosperous that we can export it to other nations inside and outside of the Empire. The most common type of crop is wheat and barley, but growing influx of new world crops plants such as corn made the production more diverse."
+ kriegerstein_lichterian_inheritance:0 "Lichterian Inheritance"
+ kriegerstein_lichterian_inheritance_desc:0 "The events that led up to the prince, and later emperor, Heinrich IV becoming the ruler of duchies of Kriegerstein and Lichter can be tracked down to the marriage of Heinrich II von Kriegerstein and Elizabeth von Lichter, which subsequently granted claims to the duchy of Lichter to von Kriegersteins and susbequently - von Schlaufbergs."
+ kriegerstein_imperial_crossroad:0 "Imperial Crossroad"
+ kriegerstein_imperial_crossroad_desc:0 "City of Hegenstadt is where 2 major imperial roads meet: Via Caroli running from Merkast to Dorschau and Via Magreini which stretches from Bohemia to Granlatz. Thanks to many merchants using this roads, the city became a hub of many goods, people, cultures and ideas."
+ kriegerstein_lessons_of_mercenary_wars:0 "Lessons of Mercenary Wars"
+ kriegerstein_lessons_of_mercenary_wars_desc:0 "Mercenary Wars refers to series of conflicts and uprisings during the XVI and XVII century happening mostly in the eastern parts of the Saelian Empire. Caused by strengthened position of mercenary bands following the League of Lippstadt and many civil wars, these wars brought not only mass devastation, but also permanently weakened the empire. Many leaders studied these wars to more effectively fight using modern tactics and technology."
+ kriegerstein_permanent_court:0 "Permanent Court"
+ kriegerstein_permanent_court_desc:0 "In the medieval period the imperial court was not operating in one location. The emperor was constantly on the move living in his vassals' quarters or his own palaces to personally control his subjects. Now through the new policies the court was set in Hegenstadt, in a splendorous palace in the middle of the city to show our power and influence."
+ kriegerstein_imperial_court_of_affairs:0 "Imperial Court of Affairs"
+ kriegerstein_imperial_court_of_affairs_desc:0 "Court of Affairs was a parrarel institution to the regular imperial court which was more focused on the matters of the lands directly under control of the emperor to take some of the burden off of him. It was the first institution of its kind, not only trying to accomodate the needs of nobility and aristocracy, but also poorer merchants and common folk."
