--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -112,3 +112,6 @@
 
  tasbibalad_nation_title:0 "Proclaim God's Kingdom @TAS"
  tasbibalad_nation_desc:0 "When Nandak received the God's wisdom on Askaragihan Peak he set out to spread His word. Now we continue his legacy as one nation."
+
+ henyu_nation_title:0 "Unite the People of Zimahei @HEN"
+ henyu_nation_desc:0 "Prosperous valley of Zimahei was always divided between warring states and was only unified for brief periods of time. We fought to bring these lands together and we will fight to keep them that way."
