--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -131,9 +131,21 @@
  amealungali_company:0 "Amealungali Charter"
  TRADE_COMPANY_AMEALUNGALI_Root_Culture_GetName:0 "[Root.Culture.GetName] Amealunga Company"
  TRADE_COMPANY_AMEALUNGALI_Trade_Company:0 "Amealungali Trade Company"
- amealungali_company:0 "Samadian Charter"
+ samadian_company:0 "Samadian Charter"
  TRADE_COMPANY_SAMADIAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Samadia Company"
  TRADE_COMPANY_SAMADIAN_Trade_Company:0 "Samadian Trade Company"
  paraderavian_company:0 "Paraderavian Charter"
  TRADE_COMPANY_PARADERAVIAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Paraderavi Company"
  TRADE_COMPANY_PARADERAVIAN_Trade_Company:0 "Paraderavian Trade Company"
+ bugtangian_company:0 "Bugtangian Charter"
+ TRADE_COMPANY_BUGTANGIAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Bugtang Company"
+ TRADE_COMPANY_BUGTANGIAN_Trade_Company:0 "Bugtangian Trade Company"
+ bunelisuli_company:0 "Bunelisuli Charter"
+ TRADE_COMPANY_BUNELISULI_Root_Culture_GetName:0 "[Root.Culture.GetName] Bunelisulia Company"
+ TRADE_COMPANY_BUNELISULI_Trade_Company:0 "Bunelisuli Trade Company"
+ zimahei_company:0 "Zimahei Charter"
+ TRADE_COMPANY_ZIMAHEI_Root_Culture_GetName:0 "[Root.Culture.GetName] Zimahei Company"
+ TRADE_COMPANY_ZIMAHEI_Trade_Company:0 "Zimahei Trade Company"
+ xilei_company:0 "Xilei Charter"
+ TRADE_COMPANY_XILEI_Root_Culture_GetName:0 "[Root.Culture.GetName] Xilei Company"
+ TRADE_COMPANY_XILEI_Trade_Company:0 "Xilei Trade Company"
